chore: Update email address to actual Gmail
- Updated email in Hero section social links
- Updated email in Contact section info and quick connect
- Updated author email in package.json
- Changed from placeholder (lalith@example.com) to actual email (Lalith22p3347@gmail.com)

All mailto links now point to the correct email address.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lalith-portfolio",
   "version": "1.0.0",
   "description": "Modern glassmorphism portfolio website for Lalith - CSE Student & Developer",
-  "author": "Lalith <lalith@example.com>",
+  "author": "Lalith <Lalith22p3347@gmail.com>",
   "license": "MIT",
   "homepage": "https://lalith-portfolio.azurestaticapps.net",
   "repository": {
