feat: implement working contact form with Azure Functions and EmailJS
- Add Azure Function backend (api/sendEmail.js) for handling form submissions
- Integrate EmailJS for email delivery to Lalith22p3347@gmail.com
- Create Toast notification component for user feedback
- Update Contact component with API integration and loading states
- Add comprehensive validation (client and server-side)
- Implement loading spinner and success/error notifications
- Configure CORS and API routing for Azure Static Web Apps
- Add setup documentation (EMAILJS_SETUP.md, QUICK_START.md)
- Protect sensitive data with .gitignore updates
- Maintain responsive design and accessibility features

Features:
✅ Full form validation (name, email, subject, message)
✅ Real-time error feedback with React Hook Form
✅ Loading states with spinner
✅ Success/error toast notifications
✅ Server-side validation and security
✅ Mobile responsive and accessible
✅ No breaking changes to existing UI

Setup required: Configure EmailJS credentials in Azure Portal
See QUICK_START.md for 3-step setup instructions

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,11 @@ yarn-error.log*
 # Local env files
 .env*.local
 
+# Azure Functions
+api/local.settings.json
+api/node_modules/
+api/.funcignore
+
 # Vercel
 .vercel
 
